# etc2comp

./: .gitignore  CMakeLists.txt
EtcLib/: CMakeLists.txt
EtcTool/: CMakeLists.txt  EtcAnalysis.cpp  EtcComparison.cpp  EtcSourceImage.cpp
